--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div id="score">Score: 0</div>
     <div id="highScore">High Score: 0</div>
     <div id="timer">Time: 20s</div>
-    <div id="instructions">Press the buttons alternatively to dance!</div>
+    <div id="instructions">Press the buttons alternately to dance!</div>
     <button id="restartBtn">Restart</button>
     <button id="shareBtn">Share on WhatsApp</button>
   </div>
